--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "js-cookie": "^3.0.5",
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
